<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="15dp"
    card_view:cardBackgroundColor="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.makeramen.roundedimageview.RoundedImageView
            card_view:riv_corner_radius="15dp"
            android:id="@+id/img_user"
            android:layout_marginEnd="16dp"
            tools:src="@tools:sample/avatars"
            android:layout_margin="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_name"
            android:layout_toEndOf="@+id/img_user"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_dark"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/img_user"
            android:layout_below="@+id/tv_name">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_building"
                android:contentDescription="@string/icon_building"
                />
            <TextView
                android:id="@+id/tv_company"
                android:text="@string/company"
                android:lines="1"
                android:maxLength="12"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_dark"
                />
            <ImageView
                android:layout_marginStart="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_location"
                android:contentDescription="@string/icon_location" />
            <TextView
                android:id="@+id/tv_location"
                android:layout_marginEnd="10dp"
                android:lines="1"
                android:maxLength="20"
                android:text="@string/location"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_dark"
                />
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>