<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/bg_detail"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.6"
                android:src="@drawable/ic_github_logo_black"
                android:translationX="120dp"
                android:translationY="50dp"
                android:contentDescription="@string/github_alpha_image" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/layout_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:orientation="horizontal">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/detail_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/user1"
                app:riv_corner_radius="28dp" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/detail_avatar"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textColor="@color/gray_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textColor="@color/gray"
                android:layout_toEndOf="@id/detail_avatar"
                android:layout_below="@id/detail_name"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/dl_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:layout_below="@id/detail_username"
                android:layout_toEndOf="@id/detail_avatar">
                <TextView
                    android:id="@+id/detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/location"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"
                    app:drawableStartCompat="@drawable/ic_location" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_below="@id/dl_location"
                android:layout_toEndOf="@id/detail_avatar">
                <TextView
                    android:id="@+id/detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/company"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"
                    app:drawableStartCompat="@drawable/ic_building" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_avatar"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circlewhite"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="@string/icon_users" />

                <TextView
                    android:id="@+id/detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/number"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/followers"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/circle"
                    android:contentDescription="@string/dot"/>

                <TextView
                    android:id="@+id/detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/number"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/following"
                    android:textColor="@color/blue_dark"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:text="@string/repository"
                    android:textColor="@color/blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_repo" />

                <TextView
                    android:id="@+id/detail_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/circle"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/number"
                    android:textColor="@color/gray_light"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/custom_input"
                    android:hint="@string/findrepo"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:autofillHints="@string/findrepo" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/find"
                    />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</ScrollView>